# Email-Triage-OpenEnv

./: Dockerfile  README.md  baseline_scores.json  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
data/: emails.py
server/: app.py  env.py
server/tasks/: graders.py
tasks/: graders.py
tests/: test_env.py
