[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Real-world email triage environment for RL agents."
readme = "README.md"
authors = [
    { name = "Nivesh Varun M" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
    "openai",
    "python-multipart",
    "openenv-core>=0.2.0"
]

[project.entry-points."openenv.environments"]
email-triage = "server.env:EmailTriageEnv"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "server.data", "server.tasks"]
